<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_flash_on_24"
            android:title="@string/daily" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_paper"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_fridge"
            android:icon="@drawable/ic_baseline_kitchen_24"
            android:title="@string/fridge" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/cart" />
    </group>
    <group
        android:id="@+id/_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_round_star_24"
            android:title="@string/starred" />
        <item
            android:id="@+id/nav_banned"
            android:icon="@drawable/ic_baseline_block_24"
            android:title="@string/ban_list" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/ic_baseline_folder_24"
            android:title="@string/recipe_catalog" />
    </group>
    <group
        android:id="@+id/_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_round_edit_24"
            android:title="@string/create_edit_recipes" />
        <item
            android:id="@+id/nav_measures"
            android:icon="@drawable/ic_baseline_table_24"
            android:title="@string/measures" />
        <item
            android:id="@+id/nav_tip"
            android:icon="@drawable/ic_baseline_book_24"
            android:title="@string/tips" />
    </group>
    <group
        android:id="@+id/_4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
    </group>
</menu>