<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/amount_f"
            android:icon="@drawable/ic_baseline_kitchen_24"
            android:title="@string/amount" />
        <item
            android:id="@+id/time_f"
            android:icon="@drawable/ic_baseline_av_timer_24"
            android:title="@string/byTime" />
        <item
            android:id="@+id/calories_f"
            android:icon="@drawable/ic_calories_24"
            android:title="@string/byCal" />
        <item
            android:id="@+id/proteins_f"
            android:icon="@drawable/ic_proteins_24"
            android:title="@string/byProt" />
        <item
            android:id="@+id/fats_f"
            android:icon="@drawable/ic_fats_24"
            android:title="@string/byFats" />
        <item
            android:id="@+id/carboh_f"
            android:icon="@drawable/ic_carbohydrates_24"
            android:title="@string/byCbh" />
    </group>
</menu>