<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_baseline_content_copy_24"
        android:title="@string/copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/de_star_recipe"
        android:icon="@drawable/ic_round_star_24"
        android:title="@string/deStar"
        app:showAsAction="never" />

    <item
        android:id="@+id/ban_recipe"
        android:icon="@drawable/ic_baseline_block_24"
        android:title="@string/ban"
        app:showAsAction="never" />

</menu>